; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_collect_one_reflog_ent.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_collect_one_reflog_ent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.rev_collect = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, %struct.object_id*, i8*, i32, i32, i8*, i8*)* @collect_one_reflog_ent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @collect_one_reflog_ent(%struct.object_id* %0, %struct.object_id* %1, i8* %2, i32 %3, i32 %4, i8* %5, i8* %6) #0 {
  %8 = alloca %struct.object_id*, align 8
  %9 = alloca %struct.object_id*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.rev_collect*, align 8
  store %struct.object_id* %0, %struct.object_id** %8, align 8
  store %struct.object_id* %1, %struct.object_id** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i8* %6, i8** %14, align 8
  %16 = load i8*, i8** %14, align 8
  %17 = bitcast i8* %16 to %struct.rev_collect*
  store %struct.rev_collect* %17, %struct.rev_collect** %15, align 8
  %18 = load %struct.rev_collect*, %struct.rev_collect** %15, align 8
  %19 = getelementptr inbounds %struct.rev_collect, %struct.rev_collect* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %7
  %23 = load %struct.rev_collect*, %struct.rev_collect** %15, align 8
  %24 = getelementptr inbounds %struct.rev_collect, %struct.rev_collect* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load %struct.object_id*, %struct.object_id** %8, align 8
  %26 = load %struct.rev_collect*, %struct.rev_collect** %15, align 8
  %27 = call i32 @add_one_commit(%struct.object_id* %25, %struct.rev_collect* %26)
  br label %28

28:                                               ; preds = %22, %7
  %29 = load %struct.object_id*, %struct.object_id** %9, align 8
  %30 = load %struct.rev_collect*, %struct.rev_collect** %15, align 8
  %31 = call i32 @add_one_commit(%struct.object_id* %29, %struct.rev_collect* %30)
  ret i32 0
}

declare dso_local i32 @add_one_commit(%struct.object_id*, %struct.rev_collect*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
